# P-pipe

./: .gitignore  README.md  cronjob  dev_log.md  dispatcher.py  dockerfile  file_splitter.py  pyproject.toml  python_in_rust.py  requirements.txt  run.sh
backend/: Cargo.toml  Rocket.toml  compose.yml
backend/src/: database_requirements.md  global_rng.rs  lib.rs  main.rs
backend/src/endpoints/: build_rocket.rs  challenges.rs  common.rs  dispatcher.rs  mod.rs  requests.rs  scheduler.rs  table_initialization.rs  transactions.rs
backend/src/migrations/: 001_create_enums.sql  002_create_challenges_schema.sql  003_create_transactions_schema.sql  004_create_requests_schema.sql  20250929085539_create_challenges_schema.sql  20251015130822_create_transactions_schema.sql  migration_notes.md
backend/src/schemas/: challenge.rs  common.rs  mod.rs  request.rs  transaction.rs
backend/src/testing_common/: connect.rs  instances.rs  mod.rs  save_instance.rs
backend/tests/: challenge_test.rs  endpoints.rs  requests_test.rs  scheduler_test.rs  transaction_tests.rs
dispatcher/: pyproject.toml
dispatcher/module/: dispatcher.py  drive_dispatcher.py  drive_utils.py  file_splitter.py
dispatcher/tests/: test_dispatcher.py
dispatcher/tests/test_data/dispatched/: split_1.csv
docs/: project_description.md
module/: dispatcher.py  file_splitter.py
py_modules/: orchestrator.py  rclone_functions.py  streamlit_frontend.py
py_modules/dispatchers/drive_dispatcher/: drive_dispatcher.py  drive_tools.py  drive_utils.py
py_modules/fetchers/: misc_fetchers.py
py_modules/judgement/: expected_response_cli.py  expected_response_getter.py  judge.py  judge_cli.py  request_status.py
py_modules/tests/: test_CLI_integration_split_dispatch.py  test_orchestrator.py
py_modules/tests/json_instances/: challenge_instance_multiple_dispatch.json  minimal_challenge_instance.json  transaction_instance_drive.json  transaction_instance_s3.json  transactions_expected_from_challenge_instance.json
tests/: test_CLI_integration_split_dispatch.py  test_dispatcher_file_splitter.py  test_file_splitter.py  test_integration_split_dispatch.py
tests/splits/: split_2.csv  split_3.csv
