[project]
name = "ppipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "google-api-python-client>=2.183.0",
    "google-api-python-client-stubs>=1.30.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]
