[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
postgres = "0.19.10"
postgres-types = { version = "0.2.9", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = { version = "0.6.0", default-features = false }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.13"
