[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
chrono = "0.4.42"
dotenv = "0.15.0"
postgres = "0.19.10"
postgres-types = { version = "0.2.9", features = ["derive"] }
proptest = "1.8.0"
proptest_async = "0.2.1"
rand = "0.9.2"
rand_pcg = "0.9.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = { version = "0.6.0", default-features = false }
rocket_db_pools = { version = "0.1", features = ["sqlx_postgres"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
strum = "0.27.2"
strum_macros = "0.27.2"
test-strategy = "0.4.3"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.13"
tokio-test = "0.4.4"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = []
deterministic = []
